force-app/main/default/objects/Matrix_Sync_Log__c/Matrix_Sync_Log__c.object-meta.xml
<CustomObject>
    <description>Audit log for Matrix inventory sync runs. One record is written by MatrixInventorySyncQueueable after every sync attempt (scheduled or manual).</description>
    <label>Matrix Sync Log</label>
    <nameField>
        <displayFormat>SL-{0000000}</displayFormat>
        <label>Sync Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Matrix Sync Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>