force-app/main/default/objects/Matrix_Sync_Log__c/fields/Error_Detail__c.field-meta.xml
<CustomField>
    <fullName>Error_Detail__c</fullName>
    <description>First error message encountered during this sync run. Null when Status is Success.</description>
    <label>Error Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>