force-app/main/default/objects/Matrix_Sync_Log__c/fields/Records_Failed__c.field-meta.xml
<CustomField>
    <fullName>Records_Failed__c</fullName>
    <description>Number of Vehicle__c records that failed to update during this sync run.</description>
    <label>Records Failed</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>