force-app/main/default/objects/Matrix_Sync_Log__c/fields/Sync_Type__c.field-meta.xml
<CustomField>
    <fullName>Sync_Type__c</fullName>
    <description>Whether this sync run was triggered by the nightly scheduler or by an admin manually via the Screen Flow.</description>
    <label>Sync Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>